# azure-python

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  aks_lifecycle.py  aks_report.py  architecture_design.py  cluster_360.py  cluster_deepdive.py  conformance.py  container_os_eol.py  cost_efficiency.py  fleet_cost.py  fleet_inventory.py  governance.py  network_ip_capacity.py  optimization_report.py  policy_components.py  policy_report.py  pyproject.toml  report_style.example.yaml  sandbox.example.json  sandbox.example.yaml  smoke_out.txt  spot_cluster_report.py  spot_opportunity.py  spot_savings.py  spot_split_design.py  subscription_rearch.py  subscriptions.csv  tag_chargeback.py  teams.example.csv  utilization_idle.py  version_eol.py  vulnerability_classification.example.json  vulnerability_report.py
azrep/: __init__.py  arg.py  armextras.py  costmgmt.py  doc_export.py  drawio.py  excel.py  fleet.py  http_client.py  kubectl.py  sandbox.py  sandbox_clone.py  sandbox_impact.py  sandbox_k8s.py  sandbox_spot.py  sandbox_upgrade.py  subs.py
docs/: cost-optimization-beyond-spot.md
manifests/spot/: descheduler.yaml
policies/: audit-aks-private-api.json
policies/tests/: pod-bad-registry.yaml  pod-good-registry.yaml
tests/: smoke_test.py  test_sandbox.py  test_spot_savings.py  test_spot_split.py  test_vulnerability_report.py
