[project]
name = "aks-reporting"
version = "0.1.0"
description = "AKS reporting toolkit for inventory, cost, policy, spot, design, and vulnerability workbooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3,<2.0",
    "requests>=2.34.2,<3.0",
    "pandas>=3.0.3,<4.0",
    "openpyxl>=3.1.5,<4.0",
    "python-docx>=1.2.0,<2.0",
    "reportlab>=4.5.1,<5.0",
    "PyYAML>=6.0.3,<7.0",
]

[tool.uv]
package = false
